--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 permalink: /:title
 
-title: BeiYuu.com
-url: http://beiyuu.com
+title: Henry Yang
+url: http://henryyang1993.github.io/
 feed: /atom.xml
-author_info: <a href="http://beiyuu.com/">BeiYuu</a>
+author_info: <a href="http://henryyang1993.github.io/">Henry Yang</a>
