--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,7 @@ author:
   twitter: yanghanyutwitte
   weibo: henryyangmicroblog
   linkedin: hanyuy
-  bio: 'Spend your money on the things money can buy. Spend your time on the things money can't buy.' 
-- Haruki Murakami
+  bio: 'Spend your money on the things money can buy. Spend your time on the things money can't buy.' - Haruki Murakami
 
 rss_path: feed.xml
 categories_path: categories.html
