update ft resume courses
CN + CC + DS + CVAPPS

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   github: henryyang1993
   twitter: yanghanyutwitte
   linkedin: hanyuy
-  bio: Spend your money on the things money can buy. Spend your time on the things money can't buy. - Haruki Murakami
+  bio: Spend your money on the things money can buy. Spend your time on the things money can't buy.
 
 rss_path: feed.xml
 categories_path: categories.html
