--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,8 @@ author:
   github: henryyang1993
   twitter: yanghanyutwitte
   linkedin: hanyuy
-  bio: Spend your money on the things money can buy. Spend your time on the things money can't buy.
+  bio: I think if you do something and it turns out pretty good, then you should go do something else wonderful, not dwell on it for too long. Just figure out what's next.
+  email_md5: 1f6be677c6135b37f5080532f3b20008
 
 rss_path: feed.xml
 categories_path: categories.html
