--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ categories_path: categories.html
 tags_path: tags.html
 
 # set it as url of an image
-# sidebar_background_image: https://www.dropbox.com/s/g9h23zrycedxtk5/sky.png?raw=1
+# sidebar_background_image: https://drive.google.com/file/d/1XOdE2YLtwaVhE-DQP2szXK-ZyjfrIkhc/view
 
 BASE_PATH:
 
