update twitter account

--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,10 @@ author:
   name: Henry Yang
   email: yanghanyugg@gmail.com
   github: henryyang1993
-  twitter: yanghanyutwitte
+  twitter: henryyangtt
   linkedin: hanyuy
   weibo: henryyangmicroblog
-  bio: Learn and Be Curious
+  bio: Learn and Be Curious!
   email_md5: 1f6be677c6135b37f5080532f3b20008
 
 rss_path: feed.xml
